--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.3",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
