--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
